Changed text in About page

--- a/public/HTML/about.html
+++ b/public/HTML/about.html
@@ -44,17 +44,17 @@
     </nav>
 
         <div class="about-container">
-        <h1>Om Prosjektet</h1>
+        <h1>About the product</h1>
 
         <div class="about-content">
             <div class="project-description">
                 <p>
-                    Dette prosjektet er utviklet som en del av vårt gruppearbeid ved [skole/organisasjon]. 
-                    Målet med produktet er å forenkle og forbedre brukerens opplevelse med [beskriv formålet med produktet kort]. 
-                    Vi har fokusert på brukervennlighet, tilgjengelighet og moderne designprinsipper.
+                    This project was developed as part of our group work at The University of South-Eastern Norway.
+                    The goal of the product is to simplify and enhance the user experience with having more control over what foods they have bought and when said foods expire. This can help the user be more 
+                    We have focused on user-friendliness, accessibility, and modern design principles.
                 </p>
                 <p>
-                    I videoen til høyre gir vi en rask introduksjon og gjennomgang av hvordan du bruker produktet vårt effektivt.
+                    In the video to the right you can watch a quick walkthrough of how you can use our product.
                 </p>
             </div>
 
