Gjort endringer i sign up og sign in

--- a/public/HTML/about.html
+++ b/public/HTML/about.html
@@ -49,8 +49,8 @@
         <div class="about-content">
             <div class="project-description">
                 <p>
-                    This project was developed as part of our group work at The University of South-Eastern Norway.
-                    The goal of the product is to simplify and enhance the user experience with having more control over what foods they have bought and when said foods expire. This can help the user be more 
+                    This project was developed as part of our group work at The University of South-Eastern Norway. <br>
+                    The goal of the product is to simplify and enhance the user experience with having more control over what foods they have bought and when said foods expire. <br>
                     We have focused on user-friendliness, accessibility, and modern design principles.
                 </p>
                 <p>
