--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -48,8 +48,22 @@
     <form id="signUpForm" action="#">
   <input type="email" id="email" name="email" placeholder="Email" required />
   <input type="text" id="username" name="username" placeholder="Username" required />
+<div class="password-container">
   <input type="password" id="password" name="password" placeholder="Password" required />
+  <span class="toggle-password" data-target="password">
+    <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
+      <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+    </svg>
+  </span>
+</div>
+<div class="password-container">
   <input type="password" id="confPassword" name="confPassword" placeholder="Confirm Password" required />
+  <span class="toggle-password" data-target="confPassword">
+    <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
+      <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+    </svg>
+  </span>
+</div>
   <button type="submit" id="signUpButton">Sign Up</button>
 </form>
     </div>
