--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe</title>
+    <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
     <link rel="stylesheet" href="../CSS/mainview.css">
     <link rel="stylesheet" href="../CSS/products-content.css">
 </head>
@@ -25,11 +26,8 @@
                 <li><a href="../index.html">Logo</a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="../index.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                        <path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/>
-                    </svg></a></li>
-                <li class="hideOnMobile"><a href="products.html">Products</a></li>
+                <li class="hideOnMobile"><a href="../index.html">My Inventory</a></li>
+                <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
                 <li class="hideOnMobile"><a href="about.html">About</a></li>
                 <li class="hideOnMobile"><a href="profileSettings.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
@@ -44,12 +42,6 @@
     </nav>
 
     <div class="content">
-
-        <div class="navigation-buttons">
-            <button class="nav-btn" id="table1-btn">All Products</button>
-            <button class="nav-btn" id="table2-btn">Your Custom products</button>
-            <button class="nav-btn" id="add-new-product-btn">Add Custom product</button>
-        </div>
         
         <div class="search-container">
 
@@ -67,6 +59,8 @@
         </div>
 
         <button type="button" class="search-btn" id="search-btn">🔍</button>
+
+        <button class="nav-btn" id="add-new-product-btn">Add Custom product</button>
     </div>
     
         <div class="table-header">
