--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
                 <li><a href="index.html">Logo</a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="../index.html">My Inventory</a></li>
-                <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
-                <li class="hideOnMobile"><a href="about.html">About</a></li>
+                <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
+                <li class="hideOnMobile"><a href="HTML/products.html">Add Products</a></li>
+                <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn" onclick="dropdownFunction()">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
