--- a/public/HTML/signin.html
+++ b/public/HTML/signin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
 <link rel="stylesheet" href="../CSS/mainview.css">
 <link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
 <body>
@@ -21,7 +22,7 @@
         </ul>
         <header>
             <div class="logo">
-                <li><a href="../index.html">Logo</a></li>
+                <li><a href="index.html"><img src="../MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
             </div>
             <ul>
                 <li class="hideOnMobile"><a href="../index.html">
