--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -23,7 +23,7 @@
         </ul>
         <header>
             <ul class="logo">
-                <li><a href="../index.html">Logo</a></li>
+                <li><a href="index.html"><img src="../MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
             </ul>
             <ul>
                 <li class="hideOnMobile"><a href="../index.html">My Inventory</a></li>
