--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -4,6 +4,7 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Sign up</title>
+    <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
     <link rel="stylesheet" href="../CSS/mainview.css">
     <link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
 </head>
@@ -22,7 +23,8 @@
         </ul>
         <header>
             <div class="logo">
-                <li><a href="../index.html">Logo</a></li>
+              <li><a href="index.html"><img src="../MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
+
             </div>
             <ul>
                 <li class="hideOnMobile"><a href="../index.html">
