--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -46,10 +46,10 @@
     <div class="container">
         <h2>Create your account</h2>
     <form id="signUpForm" action="#">
-  <input type="email" id="email" name="email" placeholder="Email" required />
-  <input type="text" id="username" name="username" placeholder="Username" required />
-  <input type="password" id="password" name="password" placeholder="Password" required />
-  <input type="password" id="confPassword" name="confPassword" placeholder="Confirm Password" required />
+  <input type="email" id="email" name="email" placeholder="Email"  />
+  <input type="text" id="username" name="username" placeholder="Username" />
+  <input type="password" id="password" name="password" placeholder="Password" />
+  <input type="password" id="confPassword" name="confPassword" placeholder="Confirm Password" />
   <button type="submit" id="signUpButton">Sign Up</button>
 </form>
     </div>
