--- a/public/HTML/signIn.html
+++ b/public/HTML/signIn.html
@@ -54,7 +54,14 @@
     <h2>Sign in</h2>
     <form id="signInForm" action="#">
         <input type="email" id="email" name="email" placeholder="Email" >
-        <input type="password" id="password" name="password" placeholder="Password" >
+        <div class="password-container">
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <span class="toggle-password" data-target="password">
+                <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" fill="#555" viewBox="0 0 24 24">
+                    <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+                </svg>
+            </span>
+        </div>
         <button type="submit" id="signInButton" class="button">Continue</button>
         <a href="signUp.html">Don't have an account? Register!</a>
     </form>
