fixed double products

--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -75,6 +75,7 @@
         <div class="table-header">
             <div class="header-item">Product Name</div>
             <div class="header-item">Product Category</div>
+            <div class="header-item"></div> 
         </div>
 
         <div class="table-container">
