edited dropdown menu look

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <button class="dropbtn" id="signInButton" href="HTML/signIn.html"> signInHere </button>
-                        <button class="dropbtn" id="signOutButton"> signOutHere </button>
-                        <button class="dropbtn" id="changePassword-button"> changePassword </button>
+                        <button class="dropbtn" id="signInButton" href="signIn.html">Sign in</button>
+                        <button class="dropbtn" id="signOutButton">Sign out</button>
+                        <button class="dropbtn" id="changePassword-button">Change password</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()">
