--- a/public/HTML/signIn.html
+++ b/public/HTML/signIn.html
@@ -37,9 +37,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <button class="dropbtn" id="signInButton" href="signIn.html">Sign in</button>
+                        <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
-                        <button class="dropbtn" id="changePassword-button">Change password</button>
+                        <a class="dropbtn" id="changePassword-button" >Change password</a>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()"><a href="#" id="show-sidebar-btn">
