added change password/username and forgot password page. edited dropdown menu

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,9 @@
                     <div class="dropdown-content" id="menuDropdown">
                         <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
-                        <a class="dropbtn" id="changePassword-button" >Change password</a>
+                        <a class="dropbtn" id="changeUsername-button" href="HTML/changeUsername.html">Change username</a>
+                        <a class="dropbtn" id="changePassword-button" href="HTML/changePassword.html">Change password</a>
+                        <button class="dropbtn" id="signOutButton">Delete account</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()">
