--- a/public/HTML/changePassword.html
+++ b/public/HTML/changePassword.html
@@ -3,10 +3,11 @@
 <head>
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Sign up</title>
+    <title>Change password</title>
     <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
     <link rel="stylesheet" href="../CSS/mainview.css">
     <link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav>
@@ -52,27 +53,39 @@
     </nav>
 
     <div class="container">
-        <h2>Create your account</h2>
-    <form id="signUpForm" action="#">
-  <input type="email" id="email" name="email" placeholder="Email" required />
-  <input type="text" id="username" name="username" placeholder="Username" required />
-<div class="password-container">
-  <input type="password" id="password" name="password" placeholder="Password" required />
-  <span class="toggle-password" data-target="password">
-    <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
-      <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
-    </svg>
-  </span>
+  <h2>Change your password</h2>
+  <form id="changePasswordForm" action="#">
+
+    <div class="password-container">
+      <input type="password" id="currentPassword" name="currentPassword" placeholder="Current password" required />
+      <span class="toggle-password" data-target="currentPassword">
+        <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
+          <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+        </svg>
+      </span>
+    </div>
+
+    <div class="password-container">
+      <input type="password" id="newPassword" name="newPassword" placeholder="New password" required />
+      <span class="toggle-password" data-target="newPassword">
+        <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
+          <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+        </svg>
+      </span>
+    </div>
+
+    <div class="password-container">
+      <input type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm new password" required />
+      <span class="toggle-password" data-target="confirmNewPassword">
+        <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
+          <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
+        </svg>
+      </span>
+    </div>
+
+    <button type="submit">Update Password</button>
+  </form>
 </div>
-<div class="password-container">
-  <input type="password" id="confPassword" name="confPassword" placeholder="Confirm Password" required />
-  <span class="toggle-password" data-target="confPassword">
-    <svg class="eye-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#555" viewBox="0 0 24 24">
-      <path d="M12 5c-7.633 0-11 7-11 7s3.367 7 11 7 11-7 11-7-3.367-7-11-7zm0 12c-2.762 0-5-2.239-5-5s2.238-5 5-5 5 2.239 5 5-2.238 5-5 5zm0-8c-1.656 0-3 1.345-3 3s1.344 3 3 3 3-1.345 3-3-1.344-3-3-3z"/>
-    </svg>
-  </span>
-</div>
-  <button type="submit" id="signUpButton">Sign Up</button>
 </form>
     </div>
     <script type="module" src="../JS/authHandlers.js"></script>
