Changed titles for all pages

--- a/public/HTML/forgotPassword.html
+++ b/public/HTML/forgotPassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Change password</title>
+    <title>EatMeMaybe - Forgot password</title>
     <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
     <link rel="stylesheet" href="../CSS/mainview.css">
     <link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
