--- a/public/HTML/products.html
+++ b/public/HTML/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>EatMeMaybe</title>
+    <title>EatMeMaybe - Add products</title>
     <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
     <link rel="stylesheet" href="../CSS/mainview.css">
     <link rel="stylesheet" href="../CSS/products-content.css">
