--- a/public/HTML/signIn.html
+++ b/public/HTML/signIn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>EatMeMaybe - Sign in</title>
 </head>
 <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
 <link rel="stylesheet" href="../CSS/mainview.css">
