--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>EatMeMaybe</title>
+    <title>EatMeMaybe - My inventory</title>
     <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
     <link rel = "stylesheet" href = "CSS/mainview.css">
     <link rel ="stylesheet" href ="CSS/index-content.css">
