--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
             </a>
         </li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="HTML/products.html">Products</a></li>
-        <li><a href="HTML/about.html">About</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="HTML/profileSettings.html">Profile</a></li>
     </ul>
         <header>
@@ -33,8 +33,8 @@
             </ul>
             <ul>
                 <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
-                <li class="hideOnMobile"><a href="HTML/products.html">Add Products</a></li>
-                <li class="hideOnMobile"><a href="HTML/about.html">About</a></li>
+                <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
+                <li class="hideOnMobile"><a href="about.html">About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn" onclick="dropdownFunction()">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
@@ -46,9 +46,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changeUsername-button" href="HTML/changeUsername.html">Change username</a>
-                        <a class="dropbtn" id="changePassword-button" href="HTML/changePassword.html">Change password</a>
+                        <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
+                        <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
+                        <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="signOutButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
@@ -63,8 +63,8 @@
     <!-- Div with message and buttons which appear if the user has not signed in -->
     <div class="auth-message" id="auth-message" style="display: none;"> <p>Oops, it looks like you're not signed in. Sign in or create an account to view your inventory.</p>
         <div class="button-group">
-            <button onclick="window.location.href='HTML/signIn.html'">Sign in</button>
-            <button onclick="window.location.href='HTML/signUp.html'">Create account</button>
+            <button onclick="window.location.href='signIn.html'">Sign in</button>
+            <button onclick="window.location.href='signUp.html'">Create account</button>
         </div>
     </div>
 
@@ -115,7 +115,7 @@
         <div class="empty-table-wrapper">
             <div class="inventory-message" id="empty-inventory-message">
                 <p>Your inventory is empty! Start adding products to fill it up!</p>
-                <button onclick="window.location.href='HTML/products.html'">Add products</button>
+                <button onclick="window.location.href='products.html'">Add products</button>
             </div>
         </div>
 
