--- a/public/signIn.html
+++ b/public/signIn.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>EatMeMaybe - Sign in</title>
 </head>
-<link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
-<link rel="stylesheet" href="../CSS/mainview.css">
-<link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
+<link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
+<link rel="stylesheet" href="CSS/mainview.css">
+<link rel ="stylesheet" href ="CSS/stylesheet-signUp.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <body>
@@ -17,17 +17,17 @@
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
             </a></li>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="profileSettings.html">Profile</a></li>
         </ul>
         <header>
             <ul class="logo">
-                <li><a href="../index.html"><img src="../MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
+                <li><a href="index.html"><img src="MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="../index.html">My Inventory</a></li>
+                <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
                 <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
                 <li class="hideOnMobile"><a href="about.html">About</a></li>
                 <li class="dropdown">
@@ -73,8 +73,8 @@
         <a href="signUp.html">Don't have an account? Register!</a>
     </form>
 </div>
-    <script type="module" src="../JS/authHandlers.js"></script>
-    <script src="../JS/navbar.js"></script>
+    <script type="module" src="JS/authHandlers.js"></script>
+    <script src="JS/navbar.js"></script>
 
 </body>
 </html>
