removed button from index

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="HTML/profileSettings.html">Profile</a></li>
+        <li><a href="profileSettings.html">Profile</a></li>
     </ul>
         <header>
             <ul class="logo">
@@ -88,7 +88,6 @@
             <button class="category-btn" data-category="Dry Products" title="Dry Products">
                 <img src="MEDIA/spices.png" alt="Dry">
             </button>
-            <button id="delete-all-btn">Empty Inventory</button>
         </div>
 <div class="inventory-wrapper">
   <table>
@@ -107,9 +106,6 @@
     </tbody>
   </table>
 </div>
-
-
-
 
         <!-- Message which shows if the user inventory table is empty -->
         <div class="empty-table-wrapper">
