--- a/public/HTML/forgotPassword.html
+++ b/public/HTML/forgotPassword.html
@@ -41,7 +41,7 @@
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                         <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
                         <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
-                        <button class="dropbtn" id="signOutButton">Delete account</button>
+                        <button class="dropbtn" id="deleteButton">Delete account</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()"><a href="#" id="show-sidebar-btn">
