--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                         <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
                         <a class="dropbtn" id="changeUsername-button" href="HTML/changeUsername.html">Change username</a>
                         <a class="dropbtn" id="changePassword-button" href="HTML/changePassword.html">Change password</a>
-                        <button class="dropbtn" id="signOutButton">Delete account</button>
+                        <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
                 </li>
