changed navbar links

--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changeUsername-button" href="HTML/changeUsername.html">Change username</a>
-                        <a class="dropbtn" id="changePassword-button" href="HTML/changePassword.html">Change password</a>
+                        <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
+                        <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
+                        <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                         <button class="dropbtn" id="EmptyInventory"> Empty Inventory</button>
