--- a/public/about.html
+++ b/public/about.html
@@ -92,6 +92,6 @@
             document.querySelector('.sidebar').style.display = 'none';
         }
     </script>
-    <script src="JS/authenticate.js"></script>
+    <script type="module" src="JS/authHandlers.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
