changed style for custom product modal

--- a/public/products.html
+++ b/public/products.html
@@ -125,7 +125,7 @@
     <input type="text" id="custom-product-name2" placeholder="Enter product name">
 </div>
 
-<label id="custom-quantity-input">Choose Quantity</label>
+<label id="quantity-title" for="quantity-input">Choose Quantity</label>
 <div class="quantity-selector">
     <button type="button" class="quantity-btn" id="custom-decrease-btn">−</button>
     <input type="number" id="custom-quantity" min="1" value="1">
