changePassword implemented and ClearInventory

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
+                        <a class="dropbtn" id="signInButton" href="HTML/signIn.html">Sign in</a>
                         <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
                         <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
                         <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
