added icon for changesites, changed sidebar css

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,12 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="profileSettings.html">Profile</a></li>
+        <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
+        <li><a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a></li>
+        <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+        <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
+        <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
+        <li><button class="dropbtn" id="EmptyInventory"> Empty Inventory</button></li>
     </ul>
         <header>
             <ul class="logo">
