--- a/public/OUTDATED_MATERIAL_KEEP_HERE/changeUsername.html
+++ b/public/OUTDATED_MATERIAL_KEEP_HERE/changeUsername.html
@@ -4,9 +4,9 @@
     <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe - Change Username</title>
-    <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
-    <link rel="stylesheet" href="CSS/mainview.css">
-    <link rel ="stylesheet" href ="CSS/stylesheet-signUp.css">
+    <link rel="icon" type="image/png" href="../MEDIA/EatMeMaybeLogo1.png">
+    <link rel="stylesheet" href="../CSS/mainview.css">
+    <link rel ="stylesheet" href ="../CSS/stylesheet-signUp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -17,19 +17,19 @@
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
             </a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../products.html">Products</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><a href="profileSettings.html">Profile</a></li>
         </ul>
         <header>
             <ul class="logo">
-                <li><a href="index.html"><img src="MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
+                <li><a href="../index.html"><img src="../MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
             </ul>
             <ul>
-                <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
-                <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
-                <li class="hideOnMobile"><a href="about.html">About</a></li>
+                <li class="hideOnMobile"><a href="../index.html">My Inventory</a></li>
+                <li class="hideOnMobile"><a href="../products.html">Add Products</a></li>
+                <li class="hideOnMobile"><a href="../about.html">About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn" onclick="dropdownFunction()">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
@@ -41,9 +41,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
+                        <a class="dropbtn" id="signInButton" href="../signIn.html">Sign in</a>
                         <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
-                        <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
+                        <a class="dropbtn" id="changePassword-button" href="../changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
@@ -73,5 +73,5 @@
 </div>
 </form>
     </div>
-    <script type="module" src="JS/authHandlers.js"></script>
+    <script type="module" src="../JS/authHandlers.js"></script>
 </body>
