--- a/public/forgotPassword.html
+++ b/public/forgotPassword.html
@@ -37,8 +37,8 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
+                        <a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a>
+                        <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
