added empty inventory button on index

--- a/public/index.html
+++ b/public/index.html
@@ -78,23 +78,28 @@
     <div id="main-content" style="display: none;">
         <h2 id="inventory-title">My Inventory</h2>
 
-        <div class="category-nav">
-            <button class="category-btn" data-category="" title="All Products">
-                <img src="MEDIA/grocery-cart.png" alt="All">
-            </button>
-            <button class="category-btn" data-category="Fruits and Vegetables" title="Fruits and Vegetables">
-                <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
-            </button>
-            <button class="category-btn" data-category="Cooling Products" title="Cooling Products">
-                <img src="MEDIA/fridge.png" alt="Cooling">
-            </button>
-            <button class="category-btn" data-category="Frozen Products" title="Frozen Products">
-                <img src="MEDIA/frozen.png" alt="Frozen">
-            </button>
-            <button class="category-btn" data-category="Dry Products" title="Dry Products">
-                <img src="MEDIA/spices.png" alt="Dry">
-            </button>
+        <div class="top-bar">
+            <div class="category-nav">
+                <button class="category-btn" data-category="" title="All Products">
+                    <img src="MEDIA/grocery-cart.png" alt="All">
+                </button>
+                <button class="category-btn" data-category="Fruits and Vegetables" title="Fruits and Vegetables">
+                    <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
+                </button>
+                <button class="category-btn" data-category="Cooling Products" title="Cooling Products">
+                    <img src="MEDIA/fridge.png" alt="Cooling">
+                </button>
+                <button class="category-btn" data-category="Frozen Products" title="Frozen Products">
+                    <img src="MEDIA/frozen.png" alt="Frozen">
+                </button>
+                <button class="category-btn" data-category="Dry Products" title="Dry Products">
+                    <img src="MEDIA/spices.png" alt="Dry">
+                </button>
+            </div>
+
+            <button id="EmptyInventory" class="emptyInventory-btn">Empty Inventory</button>
         </div>
+
 <div class="inventory-wrapper">
   <table>
     <thead>
