fixed links and spaghetti for hamburgerbar

--- a/public/about.html
+++ b/public/about.html
@@ -8,19 +8,25 @@
     <link rel ="stylesheet" href ="CSS/mainview.css">
     <link rel ="stylesheet" href ="CSS/about-content.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <nav>
         <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn">
+        <li onclick="hideSidebar()">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
-            </a></li>
+            </a>
+        </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="profileSettings.html">Profile</a></li>
+            <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
+            <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+            <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
+            <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
         </ul>
         <header>
             <ul class="logo">
@@ -82,8 +88,6 @@
         </div>
     </div>
 
-    <script src="JS/navbar.js" defer></script>
-
     <script>
         function showSidebar(){
             document.querySelector('.sidebar').style.display = 'flex';
@@ -95,3 +99,4 @@
     <script type="module" src="JS/authHandlers.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
+</html>
