--- a/public/signIn.html
+++ b/public/signIn.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name ="viewport" content ="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe - Sign in</title>
+    <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
+    <link rel="stylesheet" href="CSS/mainview.css">
+    <link rel ="stylesheet" href ="CSS/stylesheet-signUp.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
-<link rel="stylesheet" href="CSS/mainview.css">
-<link rel ="stylesheet" href ="CSS/stylesheet-signUp.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 <body>
      <nav>
         <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn">
+        <li onclick="hideSidebar()">
+            <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
-            </a></li>
+            </a>
+        </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="profileSettings.html">Profile</a></li>
+            <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
+            <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+            <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
+            <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
         </ul>
         <header>
             <ul class="logo">
