change password works, empty inventory does not

--- a/public/changePassword.html
+++ b/public/changePassword.html
@@ -22,8 +22,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
-            <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+            <li><a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a></li>
+            <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
             <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
             <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
         </ul>
@@ -97,6 +97,5 @@
 </form>
     </div>
     <script type="module" src="JS/authHandlers.js"></script>
-    <script src="JS/navbar.js"></script>
-
+    <script type="module" src="JS/navbar.js"></script>
 </body>
