--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,11 @@
         <li><a href="index.html">Inventory</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
-        <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+        <li><a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a></li>
+        <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
         <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
         <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
+        <li><button class="dropbtn" id="EmptyInventoryButton"> Empty Inventory</button></li>
     </ul>
         <header>
             <ul class="logo">
@@ -53,6 +54,7 @@
                         <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
+                        <button class="dropbtn" id="EmptyInventoryButton"> Empty Inventory</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()">
@@ -95,7 +97,6 @@
 
             <button id="EmptyInventory" class="emptyInventory-btn">Empty Inventory</button>
         </div>
-
 <div class="inventory-wrapper">
   <table>
     <thead>
