styled empty inventory button

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                 </button>
             </div>
 
-            <button id="EmptyInventory" class="emptyInventoryButton">Empty Inventory</button>
+            <button id="EmptyInventory" class="emptyInventory-btn">Empty Inventory</button>
         </div>
 <div class="inventory-wrapper">
   <table>
