fiiiix some shiiit

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
         <!-- Message which shows if the user inventory table is empty -->
         <div class="empty-table-wrapper">
             <div class="inventory-message" id="empty-inventory-message">
-                <p>Your inventory is empty! Start adding products to fill it up!</p>
+                <p>It is empty here! Start adding products to fill it up!</p>
                 <button onclick="window.location.href='products.html'">Add products</button>
             </div>
         </div>
