Delete Inventory Button works?

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
         <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
         <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
         <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
-        <li><button class="dropbtn" id="emptyInventoryButton"> Empty Inventory</button></li>
     </ul>
         <header>
             <ul class="logo">
@@ -94,7 +93,7 @@
                 </button>
             </div>
 
-            <button id="EmptyInventory" class="emptyInventory-btn">Delete Inventory</button>
+            <button class="emptyInventory-btn" id="deleteInventoryButton" >Delete Inventory</button>
         </div>
 <div class="inventory-wrapper">
   <table>
