Lagt til feilmeldinger for change password

--- a/public/changePassword.html
+++ b/public/changePassword.html
@@ -63,7 +63,7 @@
     <div class="container">
   <h2>Change your password</h2>
   <form id="changePasswordForm" action="#">
-
+    <div id="passwordMessage" class="message hidden"></div>
     <div class="password-container">
       <input type="password" id="currentPassword" name="currentPassword" placeholder="Current password" required />
       <span class="toggle-password" data-target="currentPassword">
