added about text

--- a/public/about.html
+++ b/public/about.html
@@ -67,12 +67,14 @@
         <div class="about-content">
             <div class="project-description">
                 <p>
-                    This project was developed as part of our group work at The University of South-Eastern Norway. <br>
-                    The goal of the product is to simplify and enhance the user experience with having more control over what foods they have bought and when said foods expire. <br>
-                    We have focused on user-friendliness, accessibility, and modern design principles.
-                </p>
+                <strong>EatMeMaybe</strong> is designed to help you keep track of what you have in your pantry, reducing both waste and expenses. Registering your groceries in the app will make it easy to monitor what you have, the quantity and the expiration dates. Whether you’re managing your weekly shopping or keeping an eye on long-term storage, EatMeMaybe helps ensure what you buy gets used in time.
+                </p><br>
+                <p></p>
                 <p>
-                    In the video to the right you can watch a quick walkthrough of how you can use our product.
+                Our algorithm estimates expiration dates based on food category, while the color-coded tracking system helps you stay on top of what’s still fresh. This way nothing goes to waste. Our goal is to make your life easier, while also promoting sustainability through better awareness of expiration dates. The app includes helpful features like filtering your personal inventory, viewing product details, adjusting quantities, and more. <strong>EatMeMaybe</strong> is perfect for students, families, or anyone looking to save money and reduce waste in a smart and easy way.
+                </p><br>
+                <p>
+                Still curious? Check out our video and see for yourself.
                 </p>
             </div>
 
