added text to inventory buttons, animation for navbar buttons

--- a/public/index.html
+++ b/public/index.html
@@ -100,19 +100,25 @@
         <div class="category-nav">
             <button class="category-btn" data-category="" title="All Products">
                 <img src="MEDIA/grocery-cart.png" alt="All">
+                <span>All</span>
             </button>
             <button class="category-btn" data-category="Fruits and Vegetables" title="Fruits and Vegetables">
                 <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
+                <span>F&V</span>
             </button>
             <button class="category-btn" data-category="Cooling Products" title="Cooling Products">
                 <img src="MEDIA/fridge.png" alt="Cooling">
+                <span>Cooling</span>
             </button>
             <button class="category-btn" data-category="Frozen Products" title="Frozen Products">
                 <img src="MEDIA/frozen.png" alt="Frozen">
+                <span>Frozen</span>
             </button>
             <button class="category-btn" data-category="Dry Products" title="Dry Products">
                 <img src="MEDIA/spices.png" alt="Dry">
+                <span>Dry</span>
             </button>
+
         </div>
         <button class="emptyInventory-btn" id="deleteInventoryButton">Delete Inventory</button>
     </div>
